Fix gap

--- a/css/index.css
+++ b/css/index.css
@@ -140,7 +140,7 @@ svg {
 .dashboard .header {
    display: grid;
    grid-template: 1fr 1fr / 1fr 300px;
-   gap: 1rem;
+   gap: 1ch 1rem;
    
    padding: 1rem 2rem;
 }
